# yp_mod_2

./: Cargo.toml  README.md
client/: Cargo.toml
client/cfg/: tickers
client/src/: main.rs  receiver.rs
release/: client  server
server/: Cargo.toml
server/src/: generator.rs  main.rs  quote.rs  sender.rs
shared/: Cargo.toml
shared/src/: lib.rs
