[workspace]
resolver = "3"
members = ["server", "client", "shared"]

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
clap = {version = "4.5.60", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8.4"
rand = "0.10.0"
ctrlc = "3.5.2"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"

[[bin]]
 name = "server"    
 path = "src/bin/server.rs"     

[[bin]]    
name = "client"    
path = "src/bin/client.rs"    